# centras-ai-gov

./: .gitignore  CLAUDE.md  ENV_SETUP.md  PRODUCTION_ROADMAP.md  README.md  build.gradle.kts  dev.sh  docker-compose.yml  gradle.properties  mvp_worklog.md  planning_draft.md  planning_summary.md  run_pipeline.sh  settings.gradle.kts
.claude/: settings.local.json
.github/workflows/: test.yml
apps/admin-api/: build.gradle.kts
docs/: ARCHITECTURE.md  es_pg_migration_strategy.md  implementation-gap.md  ops-menu-design.md  platform-prd.md  rag-admin-dashboard-v3.html  rag-admin-prd-v3.docx  rag-dashboard.html  rag-glossary.md  rag-pipeline-1pager.md  simulator-feedback.md  sprint-plan-ceo.md  stitch-prompts.md
docs/stitch/: README.md
docs/stitch/design-system/: 01-bright-mode.md  02-dark-kinetic.md  03-dark-sovereign.md
docs/stitch/ia/: admin-ia-final.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  auth.tsx  filter-context.tsx  nav-config.ts  theme.ts  types.ts
modules/chat-runtime/: build.gradle.kts
modules/document-registry/: build.gradle.kts
modules/identity-access/: build.gradle.kts
modules/ingestion-ops/: build.gradle.kts
modules/metrics-reporting/: build.gradle.kts
modules/organization-directory/: build.gradle.kts
modules/qa-review/: build.gradle.kts
modules/redteam/: build.gradle.kts
modules/shared-kernel/: build.gradle.kts
mvp_docs/: 01_mvp_prd.md  02_role_flows.md  03_screen_spec.md  04_data_api.md  05_architecture_openrag.md  06_access_policy.md  07_delivery_plan.md  08_traceability_matrix.md  09_unresolved_qa_state_machine.md  10_auth_authz_api.md  11_traceability_test_cases.md  12_test_strategy.md  13_test_runner_structure.md  14_test_file_scaffold.md  15_ingestion_browser_review.md  16_springboot_kotlin_ddd_msa_review.md  17_development_wbs_milestones.md  99_worklog.md  README.md
openspec/: README.md
openspec/archive/activate-rag-orchestrator/: status.md
openspec/archive/add-auth-ingestion-test-cases/: proposal.md  status.md  tasks.md
openspec/archive/add-auth-session-lifecycle/: proposal.md  status.md  tasks.md
openspec/archive/add-chat-runtime-module/: proposal.md  status.md  tasks.md
openspec/archive/add-development-wbs-plan/: proposal.md  status.md
openspec/archive/add-document-registry-module/: proposal.md  status.md
openspec/archive/add-document-writer/: proposal.md  status.md  tasks.md
openspec/archive/add-e2e-auth-ingestion-flow/: proposal.md  status.md  tasks.md
openspec/archive/add-ingestion-action-authorization/: proposal.md  status.md  tasks.md
openspec/archive/add-ingestion-worker-crawl-flow/: proposal.md  status.md  tasks.md
openspec/archive/add-ingestion-write-contracts/: proposal.md  status.md
openspec/archive/add-jpa-entities-identity-org/: proposal.md  status.md  tasks.md
openspec/archive/add-jpa-entities-ingestion-ops/: proposal.md  status.md  tasks.md
openspec/archive/add-llm-answer-generation/: proposal.md  status.md
openspec/archive/add-metrics-reporting-module/: proposal.md  status.md
openspec/archive/add-module-kdoc/: proposal.md  status.md  tasks.md
openspec/archive/add-pgvector-retrieval/: status.md
openspec/archive/add-production-logging/: proposal.md  status.md
openspec/archive/add-qa-review-module/: proposal.md  status.md  tasks.md
openspec/archive/add-rag-orchestrator-service/: proposal.md  status.md
openspec/archive/add-rag-search-logs/: status.md
openspec/archive/add-security-enhancements/: proposal.md  (+1 more)
openspec/changes/: todo.md
openspec/templates/: proposal.md  status.md  tasks.md
python/: DAILY_METRICS.md  METRICS.md  openai_agent_sdk.py
python/common/: README.md  env.py
python/eval-runner/: .env.example  README.md  citizen_questions.json  eval_questions.json  pyproject.toml
python/eval-runner/src/eval_runner/: __init__.py  bulk_query_runner.py  citizen_query_gen.py  cluster_questions.py  embedding_provider.py  export_db_eval_data.py  ingest_training_docs.py  ingestion_prep.py  llm_provider.py  prepare_eval_data.py  query_runner.py  ragas_batch.py  realtime_eval.py  training_data_loader.py
python/ingestion-worker/: CRAWLER_ARCHITECTURE.md  README.md  pyproject.toml
python/ingestion-worker/src/ingestion_worker/: admin_api_client.py  app.py  celery_app.py  crawl_executor.py  job_runner.py  kg_extractor.py  models.py  tasks.py
python/ingestion-worker/src/ingestion_worker/crawler/: __init__.py  autonomous.py  chunker.py  extractor.py
python/ingestion-worker/src/ingestion_worker/crawler/adapters/: __init__.py  base.py  ggc_go_kr.py  gjf_or_kr.py  namgu_gwangju_kr.py
python/ingestion-worker/tests/: test_admin_api_client.py  test_job_runner_file_drop.py
python/rag-orchestrator/: .env.example  OLLAMA_SETUP.md  README.md  pyproject.toml
python/rag-orchestrator/src/rag_orchestrator/: app.py  config_client.py  pii_scanner.py  retrieval.py
scripts/: enable_pgvector.sql  reset_data.sql
tests/: README.md
tests/api/: README.md
tests/data/: README.md
tests/e2e/: README.md
tests/unit/: README.md
(+789 files in other folders)
