[project]
name = "ingestion-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "typer>=0.16.0",
]

[project.scripts]
ingestion-worker = "ingestion_worker.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

