[project]
name = "ingestion-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "celery[redis]>=5.3.0",
  "httpx>=0.28.0",
  "langchain-ollama>=0.2.0",
  "langchain-text-splitters>=0.3.0",
  "loguru>=0.7.0",
  "lxml>=5.0.0",
  "pdfplumber>=0.11.2",
  "playwright>=1.49.0",
  "pypdf2>=3.0.1",
  "pydantic>=2.11.0",
  "tenacity>=8.2.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
ingestion-worker = "ingestion_worker.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion_worker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
