[project]
name = "rag-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0",
]

[project.scripts]
rag-orchestrator = "rag_orchestrator.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

